# graph-harness

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.live.yml  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml
docs/: ARCHITECTURE.md
evals/: fake_llm_scenarios.json  mock_scenarios.json
evals/deepeval/: README.md  cases.json  judge.py  test_graph_harness_quality.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
scripts/: check.py  live_smoke.py  run_deepeval.py  run_mock_evals.py
src/graph_harness/: __init__.py
tests/unit/: test_agent_deadline.py  test_agent_loop.py  test_chat_streaming.py  test_config_key_aliases.py  test_context_compaction.py  test_devices_domain.py  test_generic_operation_confirmation.py  test_governance_completion.py  test_governance_depth.py  test_graph_client.py  test_graph_client_advanced_query.py  test_graph_client_pooling.py  test_graph_completeness.py  test_http_smoke.py  test_identity_governance.py  test_intune_device_management.py  test_llm_call_capture.py  test_llm_client_quirks.py  test_llm_key_resolution.py  test_m365_productivity.py  test_message_policy.py  test_mock_client.py  test_model_profiles.py  test_operation_catalog.py  test_operational_hardening.py  test_recovery_policy.py  test_run_store.py  test_search_user.py  test_security_and_cors.py  test_tier1_domains.py  test_tier2_domains.py  test_tier3_domains.py  test_tier4_write_completeness.py  (+4 more)
(+40 files in other folders)
